Adding Dependabot and PR workflow Version bumped to v4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jaybabu/capacitor-firebase-auth",
-	"version": "3.1.2-rc.3",
+	"version": "4.0.0",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
